--- a/Laboratory/Base.lproj/Main.storyboard
+++ b/Laboratory/Base.lproj/Main.storyboard
@@ -54,7 +54,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1744.8" y="-672.41379310344837"/>
+            <point key="canvasLocation" x="2415" y="-672"/>
         </scene>
         <!--Lab CreateVC-->
         <scene sceneID="Fuo-z8-gNz">
@@ -96,7 +96,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Nuf-iW-pR0" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1577" y="37"/>
+            <point key="canvasLocation" x="3286" y="86"/>
         </scene>
         <!--Lab Item EditVC-->
         <scene sceneID="ogX-mx-b3j">
@@ -135,7 +135,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ase-Ob-Y7i" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2516" y="742.5787106446777"/>
+            <point key="canvasLocation" x="2929" y="748"/>
         </scene>
         <!--Lab-->
         <scene sceneID="GVG-qi-G2A">
@@ -154,9 +154,9 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sgg-Vk-c5e" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="976.79999999999995" y="-671.51424287856082"/>
+            <point key="canvasLocation" x="1026" y="-672"/>
         </scene>
-        <!--Item-->
+        <!--ItemVC-->
         <scene sceneID="IeG-eC-dYu">
             <objects>
                 <viewController id="m8J-3U-eDS" customClass="ItemVC" customModule="Laboratory" customModuleProvider="target" sceneMemberID="viewController">
@@ -165,11 +165,11 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="zWT-2d-Z7Z">
-                                <rect key="frame" x="0.0" y="20" width="375" height="56"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="56"/>
                                 <textInputTraits key="textInputTraits"/>
                             </searchBar>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="AGQ-aK-lpY">
-                                <rect key="frame" x="0.0" y="76" width="375" height="542"/>
+                                <rect key="frame" x="0.0" y="120" width="375" height="498"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </tableView>
                         </subviews>
@@ -185,7 +185,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="1wn-z5-gCN"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item" id="bhP-2z-uXt"/>
+                    <navigationItem key="navigationItem" id="gPu-kW-eM4"/>
                     <connections>
                         <outlet property="itemTableView" destination="AGQ-aK-lpY" id="61x-ac-UEc"/>
                         <outlet property="searchBar" destination="zWT-2d-Z7Z" id="lK9-kq-1g0"/>
@@ -193,7 +193,22 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bM7-j8-WUK" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="38" y="86"/>
+            <point key="canvasLocation" x="838" y="86"/>
+        </scene>
+        <!--Equipment InfoVC-->
+        <scene sceneID="q3C-iP-zlp">
+            <objects>
+                <viewController storyboardIdentifier="EquipmentInfoVC" id="g91-L7-Nax" customClass="EquipmentInfoVC" customModule="Laboratory" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="zR4-df-DMb">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="Zxb-0j-AIi"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="mq0-5F-6qY" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1558" y="86"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="lGb-Us-hXh">
@@ -211,7 +226,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9g7-Mb-AoJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="806" y="38"/>
+            <point key="canvasLocation" x="2414" y="86"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="JUm-Rg-vP4">
@@ -225,12 +240,31 @@
                     </tabBar>
                     <connections>
                         <segue destination="NHD-oG-205" kind="relationship" relationship="viewControllers" id="mb9-eB-q7G"/>
-                        <segue destination="m8J-3U-eDS" kind="relationship" relationship="viewControllers" id="0VE-2u-w1E"/>
+                        <segue destination="H2N-Y6-GTf" kind="relationship" relationship="viewControllers" id="0VE-2u-w1E"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="KVi-gH-dPa" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="37.600000000000001" y="-671.51424287856082"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="6Us-yb-pVh">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="H2N-Y6-GTf" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="bhP-2z-uXt"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="VKI-X4-SvA">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="m8J-3U-eDS" kind="relationship" relationship="rootViewController" id="ijr-qq-qVL"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="egE-UN-Tr7" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="38" y="86"/>
         </scene>
     </scenes>
 </document>
